<resources>
    <string name="app_name">Kickdown - Find Car Repair Centres</string>

    <!-- activity names -->
    <string name="title_activity_register">Register</string>
    <string name="title_activity_login">Login</string>
    <string name="title_list_activity">Car Repair Centres Near You</string>
    <string name="title_my_car_details">My Car Details</string>
    <string name="title_loc_map_details">Location Map Details</string>

    <!-- -->
    <string name="title_activity_maps">Current Place Details</string>
    <string name="default_info_title">Default Location</string>
    <string name="default_info_snippet">No places found, because location permission is disabled.</string>
    <string name="option_get_place">Get place</string>
    <string name="pick_place">Choose a place</string>

    <!-- text labels -->
    <string name="label_name">Name:</string>
    <string name="label_email">Email address:</string>
    <string name="label_password">Password:</string>
    <string name="label_password_confirm">Retype password:</string>

    <!-- button labels -->
    <string name="button_register">Register</string>
    <string name="button_login">Login</string>
    <string name="button_login_facebook">Login with Facebook</string>
    <string name="button_login_twitter">Login with Twitter</string>

    <!-- texts -->
    <string name="register_prompt">Do not have an account? Register now</string>
    <string name="divider_or">OR</string>
    <string name="register_link">Register</string>

    <!-- warnings -->
    <string name="warning_name_empty">Name cannot be empty</string>
    <string name="warning_name_lowercase">Name should start from an uppercase letter</string>
    <string name="warning_email_empty">Email cannot be empty</string>
    <string name="warning_email_invalid">Invalid email format</string>
    <string name="warning_password_empty">Password cannot be empty</string>
    <string name="warning_passwords_do_not_match">Passwords do not match</string>

    <!-- info messages -->
    <string name="info_registered_template">Registered. ObjectId: %s</string>
    <string name="info_registered_success">Registered successfully</string>
    <string name="info_logged_in">Logged in. ObjectId: %s</string>

    <!-- loading messages -->
    <string name="loading_empty">Loading…</string>
    <string name="loading_register">Sending registration request…</string>
    <string name="loading_login">Logging in…</string>


    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>

    <string name="nav_item_home">Home</string>
    <string name="nav_item_friends">Friends</string>
    <string name="nav_item_notifications">Messages</string>

    <string name="activity_registration">Register</string>

    <!-- navigation drawer item labels  -->
    <string-array name="nav_drawer_labels">
        <item>@string/nav_item_home</item>
        <item>@string/nav_item_friends</item>
        <item>@string/nav_item_notifications</item>
    </string-array>


    <string name="facebook_application_id" translatable="false">332205837182338</string>
    <!-- Facebook Application ID, prefixed by 'fb'.  Enables Chrome Custom tabs. -->
    <string name="facebook_login_protocol_scheme" translatable="false">fbAPP_ID</string>


    <!-- Firebase auth tutorial -->
    <string name="label_google_sign_in">Firebase + Google Sign In</string>
    <string name="desc_google_sign_in">Use a Google Sign In credential to authenticate with Firebase.</string>

    <string name="label_facebook_login">Firebase + Facebook Login</string>
    <string name="desc_facebook_login">Use a Facebook Login credential to authenticate with Firebase.</string>

    <string name="label_twitter_login">Firebase + Twitter Login</string>
    <string name="desc_twitter_login">Use a Twitter Login credential to authenticate with Firebase.</string>

    <string name="label_emailpassword">Email/Password Authentication</string>
    <string name="desc_emailpassword">Use an email and password to authenticate with Firebase.</string>

    <string name="label_anonymous_auth">Anonymous Authentication</string>
    <string name="desc_anonymous_auth">Sign in anonymously and then later upgrade to a full Firebase Auth user.</string>

    <string name="label_custom_auth">Custom Authentication</string>
    <string name="desc_custom_auth">Use a custom token signed by your own server to authenticate with Firebase.</string>

    <string name="label_firebase_ui">FirebaseUI Auth</string>
    <string name="desc_firebase_ui">Use the FirebaseUI-Android library to authenticate with Firebase.</string>

    <string name="hint_user_id">User ID</string>
    <string name="get_custom_token">Get Token</string>
    <string name="sign_in">Sign In</string>
    <string name="create_account">Create Account</string>
    <string name="sign_out">Sign Out</string>
    <string name="verify_email">Verify Email</string>
    <string name="disconnect">Disconnect</string>
    <string name="loading">Loading…</string>
    <string name="custom_token">Custom Token</string>
    <string name="signed_out">Signed Out</string>
    <string name="token_null">Token: null</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="desc_firebase_lockup">Firebase logo and name</string>
    <string name="auth_failed">Authentication failed</string>

    <string name="firebase_status_fmt">Firebase User: %s</string>
    <string name="firebase_user_management">Firebase User Management</string>

    <string name="google_status_fmt">Google User: %s</string>
    <string name="google_title_text">Google Sign In</string>

    <string name="facebook_status_fmt">Facebook User: %s</string>
    <string name="facebook_title_text">Facebook Login</string>

    <string name="emailpassword_status_fmt">Email User: %1$s (verified: %2$b)</string>
    <string name="emailpassword_title_text">Sign in or Register</string>
    <string name="my_car_details_text">Please select/update your car details below</string>
    <string name="car_details_status_fmt">Email User: %1$s (verified: %2$s)</string>

    <string name="twitter_status_fmt">Twitter User: %s</string>
    <string name="twitter_title_text">Twitter Login</string>

    <string name="firebaseui_status_fmt">Firebase User: %s</string>
    <string name="firebaseui_title_text">FirebaseUI Auth</string>

    <string name="id_fmt">User ID: %s</string>
    <string name="email_fmt">Email: %s</string>


</resources>
